fix styling on mobile devices for the logo

--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -59,7 +59,9 @@ $panel-primary-heading-bg:    $brand-primary !default;
   #logo {
     margin-bottom: 5px;
     img {
-      width: 306px;
+      max-width: 100%;
+      height: auto; 
+      display: block; 
     }
   }
   .nav a {
